--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html">
 <html >
 <head>
-	<title>title</title>
+	<title>Curriculum Vitae</title>
 	<meta charset="utf-8" />
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
 <div class="container" >
 
 <h1>CURRICULUM VITAE</h1>
-<a href= "Curriculum Jose Maria Lopez Rodriguez .pdf" class="btn btn-outline-info">Descargar Curriculum</a>
+<a href= "Curriculum Jose Maria Lopez Rodriguez.pdf" class="btn btn-outline-info">Descargar Curriculum</a>
 	<a data-toggle="collapse" href="#datospersonales"><h2><i class="fas fa-address-book"></i>DATOS PERSONALES </h2></a>
 <div class="collapse" id="datospersonales">
 <ul>
